# crypto-sentiment-backend

./: .gitignore  LICENSE.md  README.md  classifier.py  cmc_api.py  coin_collector.py  coin_collectors.py  data_collector.py  firebase.py  main.py  post_collector.py  process_text.py  pyproject.toml  reddit_api.py  refresh_token.py  scheduler.py  sentiment_classifier.py  sentiment_collector.py
.github/workflows/: python-app.yml
Backend/: .gitignore  README.md  autotrain_nlu_crypto_comparison.joblib  cmc_api.py  cryptobert_comparison.joblib  data_collector.py  distilbert_comparison.joblib  pyproject.toml  reddit_api.py  scheduler.py  twitter_roberta_comparison.joblib
Backend/sentiment/: copy_overall_sentiment.json  overall_sentiment.json  sentiment_data.json
Backend/test_models/: autotrain_NLU_crypto.py  cryptobert  cryptobert.py  distilbert_base.py  score_manager.py  test_models.py  twitter_roberta_base.py
Frontend/learn/: .env  firebaseConfig.ts  package-lock.json  package.json
Frontend/learn/lib/: database.ts  email_auth.ts  google_auth.ts  pass_auth.ts
Frontend/learn/pages/: index.tsx
Frontend/sentiment_app/: firebaseConfig.ts  package-lock.json  package.json  tsconfig.json
Frontend/sentiment_app/components/: crypto_table.jsx  crypto_table.tsx  login_form.tsx  navbar.tsx
Frontend/sentiment_app/pages/: _app.tsx  about.tsx  index.tsx  login.tsx
Frontend/sentiment_app/styles/: Home.module.css
api/: main.py
src/: classifier.py  cmc_api.py  coin_collector.py  firebase.py  firestore.py  post_collector.py  process_text.py  reddit_api.py  scheduler.py
test_models/: autotrain_NLU_crypto.py  cryptobert.py  data_collector.py  distilbert_base.py  score_manager.py  test_models.py  twitter_roberta_base.py
test_models/joblibs/: twitter_roberta_comparison.joblib
