[tool.poetry]
name = "sentiment analysis"
version = "0.1.0"
description = ""
authors = ["wil <psyws2@nottingham.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
praw = "^7.6.1"
numpy = "^1.23.5"
transformers = "^4.24.0"
python-dotenv = "^0.21.0"
black = "^22.10.0"
flake8-black = "^0.3.5"
torch = "^1.13.0"
firebase-admin = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
